Fix layout issue
Make sure to set display: flex on the container of the phenotype list in order to make it stretch the entire available screen size.  This fixes #16

Remove  height from ontology card to avoid overlapping when height is smaller than card height.

--- a/static/css/arapheno.css
+++ b/static/css/arapheno.css
@@ -79,7 +79,6 @@ i.material-icons.error {
 
 .card.ontology {
     width:390px;
-    height:300px;
 }
 .card.ontology p {
     overflow: hidden;
@@ -100,4 +99,10 @@ i.material-icons.error {
 .ontology-source-container .row {
     display:flex;
     flex:1;
+}
+
+.ontology-source-container .phenotype-container {
+    display:flex;
+    flex:1;
+    flex-direction: column;
 }
